# migjorn

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/crunchy-cli/: Cargo.toml
crates/crunchy-cli/src/: main.rs
crates/crunchy-core/: Cargo.toml
crates/crunchy-core/examples/: showcase.rs
crates/crunchy-core/src/: cell.rs  datacard.rs  deck.rs  emit.rs  lib.rs  material.rs  model.rs  num.rs  renumber.rs  surface.rs  transform.rs
crates/crunchy-py/: Cargo.toml  README.md  pyproject.toml
crates/crunchy-py/examples/: crunchy_demo.ipynb  crunchy_demo.py
crates/crunchy-py/python/crunchy/: __init__.py  __init__.pyi
crates/crunchy-py/src/: lib.rs
crates/crunchy-py/tests/: test_bindings.py  test_stubs.py
crates/crunchy-syntax/: Cargo.toml
crates/crunchy-syntax/src/: cst.rs  diagnostics.rs  flat.rs  lexer.rs  lib.rs  syntax_kind.rs
crates/crunchy-syntax/tests/: corpus.rs
crates/crunchy-syntax/tests/corpus/: basic.mcnp  bom.mcnp  title_like_comment.mcnp
crates/crunchy-syntax/tests/corpus/cells/: geometry.mcnp
crates/crunchy-syntax/tests/corpus/surfaces/: macrobody_ampersand.mcnp
crates/crunchy-syntax/tests/snapshots/: corpus__corpus@basic.mcnp.snap  corpus__corpus@bom.mcnp.snap  corpus__corpus@cells__geometry.mcnp.snap  corpus__corpus@cells__void_cell_continuation_params.mcnp.snap  corpus__corpus@continuations__ampersand_and_indent.mcnp.snap  corpus__corpus@continuations__dollar_only_line.mcnp.snap  corpus__corpus@data__materials_and_tallies.mcnp.snap  corpus__corpus@surfaces__macrobody_ampersand.mcnp.snap  corpus__corpus@title_like_comment.mcnp.snap
crates/migjorn/: Cargo.toml
crates/migjorn-py/: Cargo.toml  README.md  pyproject.toml
crates/migjorn-py/examples/: migjorn_demo.ipynb  migjorn_demo.py  showcase.ipynb  universe_compose.py
crates/migjorn-py/python/migjorn/: __init__.py  __init__.pyi
crates/migjorn-py/src/: lib.rs
crates/migjorn-py/tests/: test_bindings.py  test_stubs.py
crates/migjorn-syntax/: Cargo.toml
crates/migjorn-syntax/src/: cst.rs  diagnostics.rs  lexer.rs  lib.rs
crates/migjorn-syntax/tests/: corpus.rs
crates/migjorn-syntax/tests/corpus/: basic.mcnp  bom.mcnp
crates/migjorn-syntax/tests/corpus/cells/: mixed_params.mcnp  void_cell_continuation_params.mcnp
crates/migjorn-syntax/tests/corpus/continuations/: ampersand_and_indent.mcnp  dollar_only_line.mcnp
crates/migjorn-syntax/tests/corpus/data/: materials_and_tallies.mcnp
crates/migjorn-syntax/tests/snapshots/: corpus__corpus@basic.mcnp.snap  corpus__corpus@bom.mcnp.snap  corpus__corpus@cells__geometry.mcnp.snap  corpus__corpus@cells__mixed_params.mcnp.snap  corpus__corpus@cells__void_cell_continuation_params.mcnp.snap  corpus__corpus@continuations__ampersand_and_indent.mcnp.snap  corpus__corpus@continuations__dollar_only_line.mcnp.snap  corpus__corpus@data__materials_and_tallies.mcnp.snap  corpus__corpus@surfaces__macrobody_ampersand.mcnp.snap  corpus__corpus@title_like_comment.mcnp.snap
crates/migjorn/examples/: showcase.rs
crates/migjorn/src/: cell.rs  compose.rs  datacard.rs  emit.rs  lib.rs  material.rs  model.rs  renumber.rs  surface.rs  transform.rs
docs/: m0-findings.md  m5-renumber.md  m6-editing.md  m7-structural-editing.md  m8-construction.md  m9-renumber-generalization.md
migjorn/: Cargo.toml  card.rs  lib.rs  public_helpers.rs
migjorn-py/: Cargo.toml
migjorn-py/src/: lib.rs  py_cell_card.rs  py_data_cards.rs  py_model.rs  py_surface_card.rs  py_utils.rs
migjorn-py/src/py_cell_card/: py_cell_param.rs
migjorn/cell_card/: parser_cell_parameters.rs
migjorn/data_card/: unparsed_card.rs
migjorn/examples/: bench.rs
migjorn/model/: renumbering.rs  writer.rs
migjorn/parser_utils/: character_class.rs  common_parsing_functions.rs  general_cards_parser.rs
migjorn/src/: cell_card.rs  data_card.rs  lib.rs  main.rs  model.rs  parser_utils.rs  surface_card.rs
migjorn/src/cell_card/: cell_writer.rs  parser_geometry.rs
migjorn/src/cli/: mod.rs  utils.rs
migjorn/src/cli/commands/: info.rs  parsing_check.rs  renumber.rs
migjorn/src/data_card/: material_card.rs  tally_card.rs  transformation_card.rs
migjorn/src/model/: extract_universe.rs  reader.rs  validation_checks.rs
migjorn/src/parser_utils/: number_parsing.rs  original_bytes.rs  parser_errors.rs  section_parser.rs  spanned.rs
migjorn/tests/: test_cli.rs  test_model_comparisons.rs  test_read_and_write.rs  test_validation_checks.rs
python/migjorn/: README.md  __init__.py  __init__.pyi  __main__.py  card.py  card.pyi  cell_card.pyi  data_card.pyi  model.pyi  surface.pyi  utils.pyi
python/tests/: test_cell_card.py  test_cli.py  test_data_card.py  test_model.py  test_renumbering.py  test_surface.py  test_validation_checks.py
untracked/: validate.rs
