[workspace]
resolver = "2"
members = [
    "crates/crunchy-syntax",
    "crates/crunchy-core",
    "crates/crunchy-cli",
]

[workspace.package]
edition = "2021"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlvaroCubi/crunchy"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
