[package]
name = "crunchy-py"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
# The compiled extension is the private `crunchy._crunchy` submodule; the public
# `crunchy` package (python/crunchy) re-exports it and carries the type stubs.
name = "_crunchy"
crate-type = ["cdylib"]

[dependencies]
crunchy-core = { path = "../crunchy-core" }
rustc-hash = "2"
pyo3 = { version = "0.23", features = [
    "abi3-py39",
    "extension-module",
    "generate-import-lib",
] }
