[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "crunchy-mcnp"
description = "A fast, lossless MCNP input parser with whole-geometry editing."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Alvaro Cubi" }]
keywords = ["mcnp", "parser", "monte-carlo", "neutronics"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]

[project.optional-dependencies]
# Everything needed to run the example notebook:
#   uv run --with "./crates/crunchy-py[notebook]" jupyter lab ...
notebook = ["jupyterlab", "ipykernel", "nbconvert"]

[project.urls]
Repository = "https://github.com/AlvaroCubi/crunchy"

[tool.maturin]
# The compiled extension is the private `crunchy._crunchy` submodule; the public
# `crunchy` package lives in python/crunchy and carries the type stubs. Build
# stable abi3 wheels so one wheel serves CPython 3.9+.
module-name = "crunchy._crunchy"
features = ["pyo3/extension-module"]
python-source = "python"
