[package]
name = "migjorn-py"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
# The compiled extension is the private `migjorn._migjorn` submodule; the public
# `migjorn` package (python/migjorn) re-exports it and carries the type stubs.
name = "_migjorn"
crate-type = ["cdylib"]

[dependencies]
migjorn = { path = "../migjorn" }
rustc-hash = "2"
pyo3 = { version = "0.23", features = [
    "abi3-py39",
    "extension-module",
    "generate-import-lib",
] }
