[package]
name = "migjorn-syntax"
description = "Lossless syntax layer (lexer + concrete syntax tree) for the migjorn MCNP parser."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rustc-hash = "2"

[dev-dependencies]
insta = { version = "1", features = ["glob"] }
